# BridgeIT-artifact

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: check.yml  deploy.yml
bridgeit/: __init__.py  __main__.py
bridgeit/adapters/api/: errors.py  main.py
bridgeit/application/: dto.py
bridgeit/application/ports/: requirement_repository.py
bridgeit/domain/: __init__.py  requirement.py
bridgeit/infrastructure/persistence/: sqlite_requirement_repository.py
docs/: RoadMap.md  architecture.md  domain-model.md  report.md
tests/: test_my_class.py
tests/application/: fakes.py  test_in_memory_requirement_repository.py
tests/domain/: __init__.py  test_requirement.py
tests/infrastructure/persistence/: test_sqlite_requirement_repository.py
web/: api.js  app.js  create.html  create.js  effects.js  index.html  requirements.html  requirements.js  style.css
