[tool.poetry]
name = "bridgeit"
packages = [
    { include = "bridgeit" },
]
version = "1.0.0"
description = "AI-Supported Requirements Engineering Platform — Software Engineering project, University of Bologna"
authors = [
    "Martina Fava <martina.fava3@studio.unibo.it>",
    "Nicole Tresca <nicole.tresca@studio.unibo.it>",
]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/unibo-dtm-se-2526-bridgeit/BridgeIT-artifact"
repository = "https://github.com/unibo-dtm-se-2526-bridgeit/BridgeIT-artifact"
keywords = ["requirements-engineering", "ai", "software-engineering", "hexagonal-architecture"]

[tool.poetry.dependencies]
python = ">= 3.10.0 < 4.0.0"
fastapi = "^0.139.0"
uvicorn = "^0.51.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.37.0"
poetry = "^1.8.3"
pytest = "^8.3.5"
ruff = "^0.15.0"
httpx = "^0.28.1"

[tool.poe.tasks]
test = "pytest"
coverage = "coverage run -m pytest"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
ruff-check = "ruff check"
ruff-fix = "ruff check --fix"
format = "ruff format"
format-check = "ruff format --check"
mypy = "mypy bridgeit tests"
compile = "python -m compileall bridgeit tests"
static-checks = [
    "ruff-check",
    "mypy",
]

[tool.coverage.run]
source = ["bridgeit"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
